--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,7 +1,7 @@
 <h1>REGISTRAR NUEVO PRODUCTO</h1>
 <section>
   <div class="container mt-6" style="max-width: 500px">
-    <form id="form" class= "styleForm">
+    <form id="formProducts" class= "styleForm">
         <h3 class="is-size-3 mb-5">Ingrese un nuevo producto</h3>
           <div class="field">
             <label for="title" class="label">Título</label>
